--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: generic
-script: printf 'empty'
-notifications:
-  email: false
+language: rust
+rust:
+  - stable
+  - beta
+  - nightly
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y libdbus-1-dev
