--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rust:
   - stable
   - beta
   - nightly
+cache: cargo
 before_install:
   - sudo apt-get update
   - sudo apt-get install -y libdbus-1-dev
