--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Zahari Petkov <zahari@resin.io>", "Aaron Brodersen <aaron@resin.io>"
 description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
 
 [dependencies]
+pad = "0.1"
 network-manager = "0.11"
 clap = "2.24"
 iron = "0.6"
