--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wifi-connect"
 version = "4.2.1"
-authors = ["Zahari Petkov <zahari@resin.io>", "Aaron Brodersen <aaron@resin.io>"]
+authors = ["Mathew Heard <mheard@x4b.net>"]
 description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
 
 [dependencies]
@@ -10,8 +10,6 @@ network-manager = "0.11"
 clap = "2.24"
 iron = "0.6"
 iron-cors = "0.7"
-staticfile = "0.5"
-mount = "0.4"
 router = "0.6"
 serde = "1.0"
 serde_json = "1.0"
@@ -29,4 +27,5 @@ default-features = false
 [profile.release]
 lto = true
 codegen-units=1
-opt-level=3
+opt-level = 'z'
+panic = 'abort'
